--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@tanstack/react-query": "^4.7.1",
     "@tanstack/react-query-devtools": "^4.7.1",
+    "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-location": "^3.3.4",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.8.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
